--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "07-http-server",
+  "name": "09",
   "version": "0.1.0",
-  "description": "![cf](https://i.imgur.com/7v5ASc8.png) Lab 07: Vanilla HTTP Server ======",
+  "description": "Lab 09 ======",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jozue06/07-http-server.git"
+    "url": ""
   },
   "directories": {
     "lib": "lib",
@@ -19,9 +19,7 @@
   "author": "jpm6",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/jozue06/07-http-server/issues"
   },
-  "homepage": "https://github.com/jozue06/07-http-server#readme",
   "dependencies": {
     "cowsay": "^1.3.0",
     "dotenv": "^6.0.0",
